2014-03-18 Jan Gehring <jan.gehring, gmail.com> (0.1.0)
  * added apt repository management