@@ -1,4 +1,4 @@
-#!/usr/bin/env perl
+#!perl
 
 use FindBin;
 use lib "$FindBin::Bin/../lib";
@@ -137,6 +137,35 @@ I</etc/rex/repositorio.conf>.
  <Repository centos-6-x86-64-mixed>
    local = centos-6-x86-64-mixed/mixed/6/x86_64/
    type  = Yum
+ </Repository>
+
+If you want to sign your custom repositories you have to configure the gpg key to use.
+repositorio automatically exports the public key into the root of the repository, so it can be imported from the clients.
+If you don't specify the gpg password repositorio will ask you for the password.
+
+An example for YUM repositories:
+
+ <Repository centos-6-x86-64-mixed>
+   local = centos-6-x86-64-mixed/mixed/6/x86_64/
+   type  = Yum
+   <gpg>
+     key      = DA95F273
+     password = test
+   </gpg>
+ </Repository>
+
+An example for APT repositories:
+
+ <Repository debian-7-x86-64-mixed>
+   local     = debian-7-x86-64-mixed/debian
+   type      = Apt
+   arch      = amd64
+   dist      = wheezy
+   component = mixed
+   <gpg>
+     key      = DA95F273
+     password = test
+   </gpg>
  </Repository>
 
 An example log4perl.conf file:
